--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
 
+    implementation 'com.google.android.material:material:1.0.0'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
+    testImplementation 'io.mockk:mockk:1.9.3'
+
     implementation "androidx.room:room-ktx:$room_version"
 
     androidTestImplementation 'androidx.test:core:1.3.0'
