--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:truth:1.3.0'
     androidTestImplementation 'com.google.truth:truth:1.1.2'
 
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
 
     androidTestImplementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'
 
